--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/damaged-items-by-room/damaged-items-by-room.component.html
@@ -35,24 +35,33 @@
                   </td>
                 </ng-container>
 
-                <!-- Delete Icon Column -->
-                <ng-container matColumnDef="deleteIcon" style="width:20%">
+                <!-- Delete & Edit Icons Column -->
+                <ng-container matColumnDef="icons" style="width:20%">
                   <th mat-header-cell *matHeaderCellDef>
-                    &nbsp;
+                    &nbsp;Icons
                   </th>
                   <td *matCellDef="let element" mat-cell>
                     <button
-                    class="delete-image"
-                    mat-icon-button
-                    aria-label="Remove"
-                    (click)="deleteDamagedRoomRow(index)"
-                  >
-                    <img src="/assets/images/delete.svg" height="35" width="35" />
-                    <img
-                      src="/assets/images/delete_onhover.svg"
-                      height="35"
-                      width="35"
-                    />
+                      class="delete-image"
+                      mat-icon-button
+                      aria-label="Edit"
+                      (click)="editDamagedRoomRow(element, index)"
+                    >
+                      <img src="/assets/images/edit.svg" height="35" width="35" />
+                      <img
+                        src="/assets/images/edit_onhover.svg"
+                        height="35"
+                        width="35"
+                      />
+                    </button>&nbsp;
+                    <button
+                      class="delete-image"
+                      mat-icon-button
+                      aria-label="Remove"
+                      (click)="deleteDamagedRoomRow(index)"
+                    >
+                      <img src="/assets/images/delete.svg" height="35" width="35" />
+                      <img src="/assets/images/delete_onhover.svg" height="35" width="35"/>
                     </button>
                   </td>
                 </ng-container>
